--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
 
     <include
         layout="@layout/app_bar_main"
+        android:id="@+id/appBar_main_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
