--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -8,6 +8,7 @@
     tools:context="com.ludandroid.lud.MainActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -18,6 +19,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
+
 
                 <ImageView
                     android:id="@+id/toolbar_logo"
@@ -40,26 +42,32 @@
 
         </android.support.v7.widget.Toolbar>
 
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_main" />
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_gravity="end|bottom"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay" >
-
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/toolbar_tabs"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
 
-        </RelativeLayout>
+        </android.support.design.widget.TabLayout>
 
+    </android.support.design.widget.AppBarLayout>
 
-    </android.support.v7.widget.Toolbar>
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.ludandroid.lud.MainActivity"
+        tools:showIn="@layout/app_bar_main"
+        android:id="@+id/main_viewPager">
 
+    </android.support.v4.view.ViewPager>
+
+    <!--
+    <include layout="@layout/content_main"
+        android:id="@+id/main_content"/>
+    /!-->
 </android.support.design.widget.CoordinatorLayout>
