--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -42,32 +42,12 @@
 
         </android.support.v7.widget.Toolbar>
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/toolbar_tabs"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
-
-        </android.support.design.widget.TabLayout>
-
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
+    <FrameLayout
+        android:id="@+id/main_fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.ludandroid.lud.MainActivity"
-        tools:showIn="@layout/app_bar_main"
-        android:id="@+id/main_viewPager">
+        android:layout_marginTop="?attr/actionBarSize"/>
 
-    </android.support.v4.view.ViewPager>
-
-    <!--
-    <include layout="@layout/content_main"
-        android:id="@+id/main_content"/>
-    /!-->
 </android.support.design.widget.CoordinatorLayout>
