--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,13 +1,92 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ludandroid.lud.HomeFragment">
+    >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/toolbar_tabs"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/home_viewPager">
 
-</FrameLayout>
+    </android.support.v4.view.ViewPager>
+
+    <LinearLayout
+        android:id="@+id/toolbar_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:layout_gravity="end|bottom"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        >
+
+        <ImageButton
+            android:id="@+id/toolbar_bottom_button1"
+            android:src="@drawable/r_42a"
+            android:scaleType="centerInside"
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_weight="0.3"
+            style="@style/Widget.AppCompat.ActionButton"
+            />
+
+        <ImageView
+            android:src="@drawable/r_14"
+            android:scaleType="centerInside"
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_weight="0.03"
+            />
+
+
+        <ImageButton
+            android:id="@+id/toolbar_bottom_button2"
+            android:src="@drawable/r_42a"
+            android:scaleType="centerInside"
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_weight="0.3"
+            style="@style/Widget.AppCompat.ActionButton"
+            />
+
+        <ImageView
+            android:src="@drawable/r_14"
+            android:scaleType="centerInside"
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_weight="0.03"
+            />
+
+        <ImageButton
+            android:id="@+id/toolbar_bottom_button3"
+            android:src="@drawable/r_42a"
+            android:scaleType="centerInside"
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_weight="0.3"
+            style="@style/Widget.AppCompat.ActionButton"
+            />
+
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
+
