Reverts fragment_timeline to not use FrameLayout (redundant)

--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -1,14 +1,6 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-<android.support.v7.widget.RecyclerView
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/timeline_recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ludandroid.lud.TimelineFragment" />
-
-</FrameLayout>
+    tools:context="com.ludandroid.lud.TimelineFragment"
+    android:id="@+id/timeline_recyclerView"/>
