--- a/app/src/main/res/layout/card_timeline.xml
+++ b/app/src/main/res/layout/card_timeline.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardUseCompatPadding="true"
     app:contentPadding="@dimen/activity_vertical_margin"
+    android:layout_marginBottom="1dp"
     >
 
     <LinearLayout
