--- a/app/src/main/res/layout/card_timeline_content_inner.xml
+++ b/app/src/main/res/layout/card_timeline_content_inner.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="0.2"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <com.vipul.hp_hp.timelineview.TimelineView
             android:id="@+id/time_marker"
@@ -20,7 +20,7 @@
             app:layout_constraintVertical_bias="1.0"
             app:line="@color/colorPrimary"
             app:line_size="2dp"
-            app:marker_size="25dp" />
+            app:marker_size="20dp" />
 
     </LinearLayout>
 
