--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,9 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:id="@+id/home_viewPager">
-
-    </android.support.v4.view.ViewPager>
+        android:id="@+id/home_viewPager"
+        android:layout_marginBottom="?attr/actionBarSize"/>
 
     <LinearLayout
         android:id="@+id/toolbar_bottom"
